--- a/subjek.html
+++ b/subjek.html
@@ -2,28 +2,24 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kategori: Subjek & Orang</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Orang & Subjek</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
-      font-family: 'Arial', cursive, arial;
-      background-color: #80daeb;
+      font-family: 'Arial', sans-serif;
+      background-color: #fef9ef;
       margin: 0;
       padding: 20px;
       text-align: center;
     }
-
     h1 {
-      color: #ffffff;
-      margin-bottom: 10px;
+      color: #333;
     }
-
     .voice-select {
       margin: 10px auto 20px;
       max-width: 300px;
     }
-
     .voice-select select {
       width: 100%;
       padding: 8px;
@@ -32,7 +28,44 @@
       border: 1px solid #ccc;
       cursor: pointer;
     }
-
+    .gear-container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    .gear-btn {
+      font-size: 1.5em;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .pengaturan {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 30px;
+      right: 0;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 5px;
+      z-index: 99;
+    }
+    .pengaturan.hidden {
+      display: none;
+    }
+    .pengaturan button {
+      background-color: #3498db;
+      color: white;
+      border: none;
+      padding: 6px 10px;
+      margin: 4px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .pengaturan button:hover {
+      background-color: #2980b9;
+    }
     .container {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -40,87 +73,61 @@
       max-width: 600px;
       margin: 0 auto 40px;
     }
-
     .item {
       padding: 8px 10px 18px 10px;
       box-shadow: 2px 2px 6px #00000033;
       border-radius: 12px;
       cursor: pointer;
-      user-select: none;
-      transition: transform 0.2s ease;
       background-color: #ffffff;
       border: 2px solid #cbd5e1;
       position: relative;
     }
-
     .item:hover {
       transform: scale(1.03);
     }
-
     .emoji {
       font-size: 2.5em;
-      line-height: 1;
     }
-
     .item p {
       margin: 5px 0;
       font-size: 1em;
+      font-weight: bold;
       color: #1f2937;
     }
-
     .controls {
-      position: relative;
       display: flex;
-      justify-content: flex-end;
-      gap: 8px;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 5px;
     }
-
-    .controls button.fav {
-      position: absolute;
-      top: 8px;
-      left: 8px;
-      font-size: 1.6em;
-      color: #888;
-      background: none;
-      border: none;
-      cursor: pointer;
-      user-select: none;
-      transition: color 0.3s ease, filter 0.3s ease;
-      z-index: 10;
-      filter: grayscale(70%);
-    }
-
-    .controls button.fav.active {
-      color: #FFD700;
-      filter: none;
-      text-shadow: 0 0 5px #FFD700;
-    }
-
-    .controls button.mic {
+    .controls button {
       background: none;
       border: none;
       font-size: 1.2em;
       cursor: pointer;
-      color: #0a3d62;
-      position: relative;
-      z-index: 5;
     }
-
-    .feedback {
-      margin-top: 4px;
-      font-weight: bold;
-      min-height: 18px;
-      font-size: 0.9em;
-      color: #0a3d62;
+    .fav {
+      color: gray;
+    }
+    .fav.active {
+      color: gold;
+      text-shadow: 0 0 3px gold;
     }
   </style>
 </head>
 <body>
+  <h1>Orang & Subjek</h1>
 
-  <h1 id="judulKategori">Kategori: Subjek & Orang</h1>
+  <div class="gear-container">
+    <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
+    <div id="menuPengaturan" class="pengaturan hidden">
+      <button onclick="tambahKosakata()">➕ Tambah</button>
+      <button onclick="hapusKosakata()">🗑️ Hapus</button>
+    </div>
+  </div>
 
   <div class="voice-select">
-    <label for="voiceSelect" style="color:white">Pilih Suara:</label>
+    <label for="voiceSelect">Pilih Suara:</label>
     <select id="voiceSelect">
       <option value="Indonesian Female" selected>Perempuan</option>
       <option value="Indonesian Male">Laki-laki</option>
@@ -130,57 +137,115 @@
   <div class="container" id="gridKategori"></div>
 
   <script>
-    const dataKategori = {
-      judul: "Subjek & Orang",
-      items: [
-        { teks: 'Ayah', emoji: '👨‍🦰' },
-        { teks: 'Ibu', emoji: '👩‍🦰' },
-        { teks: 'Kakak laki-laki', emoji: '👦🏻' },
-        { teks: 'Kakak perempuan', emoji: '👧🏻' },
-        { teks: 'Adik laki-laki', emoji: '👶🏻' },
-        { teks: 'Adik perempuan', emoji: '👶🏻' },
-        { teks: 'Kakek', emoji: '👴🏻' },
-        { teks: 'Nenek', emoji: '👵🏻' },
-        { teks: 'Guru', emoji: '🧑🏻‍🏫' },
-        { teks: 'Teman', emoji: '🧒🏻' },
-        { teks: 'Dokter', emoji: '🧑🏻‍⚕️' },
-        { teks: 'Perawat', emoji: '👩🏻‍⚕️' },
-        { teks: 'Polisi', emoji: '👮🏻‍♂️' },
-        { teks: 'Pemadam kebakaran', emoji: '👨🏻‍🚒' },
-        { teks: 'Supir', emoji: '🧑🏻‍✈️' },
-        { teks: 'Petani', emoji: '👨🏻‍🌾' },
-        { teks: 'Pedagang', emoji: '🧑🏻‍💼' },
-        { teks: 'Tukang bangunan', emoji: '👷🏻‍♂️' },
-        { teks: 'Tukang cukur', emoji: '💈' },
-        { teks: 'Saya', emoji: '🧍🏻' },
-        { teks: 'Kamu', emoji: '🫵🏻' },
-        { teks: 'Orang lain', emoji: '🧑🏻‍🤝‍🧑🏻' },
-        { teks: 'Om', emoji: '🧔🏻' },
-        { teks: 'Tante', emoji: '👩🏻' },
-        { teks: 'Sepupu', emoji: '👦🏻' },
-        { teks: 'Tetangga', emoji: '🏘️' },
-        { teks: 'Pengasuh', emoji: '🧑🏻‍🍼' },
-        { teks: 'Teman sekolah', emoji: '👩🏻‍🎓' },
-        { teks: 'Teman bermain', emoji: '🧒🏻' },
-        { teks: 'Satpam', emoji: '🛡️' },
-        { teks: 'Penjaga kantin', emoji: '🥪' },
-        { teks: 'Penjual', emoji: '🧑🏻‍💼' },
-        { teks: 'Tukang parkir', emoji: '🅿️' },
-        { teks: 'Tukang kebun', emoji: '🧑🏻‍🌾' },
-        { teks: 'Tukang roti', emoji: '🥖' },
-        { teks: 'Tukang pos', emoji: '📮' },
-        { teks: 'Tukang listrik', emoji: '💡' },
-        { teks: 'Pemulung', emoji: '🧹' },
-        { teks: 'Orang baik', emoji: '😊' },
-        { teks: 'Orang jahat', emoji: '😠' },
-        { teks: 'Laki-laki', emoji: '👨🏻' },
-        { teks: 'Perempuan', emoji: '👩🏻' },
-        { teks: 'Anak-anak', emoji: '🧒🏻' },
-        { teks: 'Orang dewasa', emoji: '🧑🏻' },
-        { teks: 'Orang tua', emoji: '👵🏻👴🏻' },
-      ]
-    };
-  </script>
+    const key = 'kosakata_orang_subjek';
+    const defaultItems = [
+      { teks: 'Ayah', emoji: '👨‍🦰' },
+      { teks: 'Ibu', emoji: '👩‍🦰' },
+      { teks: 'Kakak laki-laki', emoji: '👦🏻' },
+      { teks: 'Kakak perempuan', emoji: '👧🏻' },
+      { teks: 'Adik laki-laki', emoji: '👶🏻' },
+      { teks: 'Adik perempuan', emoji: '👶🏻' },
+      { teks: 'Kakek', emoji: '👴🏻' },
+      { teks: 'Nenek', emoji: '👵🏻' },
+      { teks: 'Guru', emoji: '🧑🏻‍🏫' },
+      { teks: 'Teman', emoji: '🧒🏻' },
+      { teks: 'Dokter', emoji: '🧑🏻‍⚕️' },
+      { teks: 'Saya', emoji: '🧍🏻' },
+      { teks: 'Kamu', emoji: '🫵🏻' },
+      { teks: 'Orang lain', emoji: '🧑🏻‍🤝‍🧑🏻' },
+      { teks: 'Om', emoji: '🧔🏻' },
+      { teks: 'Tante', emoji: '👩🏻' },
+      { teks: 'Sepupu', emoji: '👦🏻' },
+      { teks: 'Tetangga', emoji: '🏘️' },
+      { teks: 'Orang baik', emoji: '😊' },
+      { teks: 'Orang jahat', emoji: '😠' },
+      { teks: 'Laki-laki', emoji: '👨🏻' },
+      { teks: 'Perempuan', emoji: '👩🏻' },
+      { teks: 'Anak-anak', emoji: '🧒🏻' },
+      { teks: 'Orang dewasa', emoji: '🧑🏻' },
+      { teks: 'Orang tua', emoji: '👵🏻👴🏻' },
+    ];
 
+    function loadItems() {
+      const saved = JSON.parse(localStorage.getItem(key) || '[]');
+      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
+    }
+
+    function saveItems(items) {
+      localStorage.setItem(key, JSON.stringify(items));
+    }
+
+    let dataKategori = {
+      judul: "Orang & Subjek",
+      items: loadItems()
+    };
+
+    const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
+
+    function togglePengaturan() {
+      document.getElementById('menuPengaturan').classList.toggle('hidden');
+    }
+
+    function tambahKosakata() {
+      const teks = prompt("Masukkan teks:");
+      const emoji = prompt("Masukkan emoji:");
+      if (teks && emoji) {
+        const newItem = { teks: teks.trim(), emoji: emoji.trim() };
+        dataKategori.items.push(newItem);
+        saveItems(dataKategori.items);
+        renderGridKategori();
+      }
+    }
+
+    function hapusKosakata() {
+      const teks = prompt("Masukkan teks yang ingin dihapus:");
+      const index = dataKategori.items.findIndex(item => item.teks === teks);
+      if (index !== -1) {
+        dataKategori.items.splice(index, 1);
+        saveItems(dataKategori.items);
+        renderGridKategori();
+      } else {
+        alert("Teks tidak ditemukan!");
+      }
+    }
+
+    function bicara(teks) {
+      const voice = document.getElementById('voiceSelect').value;
+      responsiveVoice.speak(teks, voice);
+    }
+
+    function toggleFavorit(teks) {
+      const index = favoritList.indexOf(teks);
+      if (index !== -1) {
+        favoritList.splice(index, 1);
+      } else {
+        favoritList.push(teks);
+      }
+      localStorage.setItem('favoritList', JSON.stringify(favoritList));
+      renderGridKategori();
+    }
+
+    function renderGridKategori() {
+      const container = document.getElementById('gridKategori');
+      container.innerHTML = '';
+      dataKategori.items.forEach(item => {
+        const isFavorit = favoritList.includes(item.teks);
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `
+          <div class="emoji">${item.emoji}</div>
+          <p>${item.teks}</p>
+          <div class="controls">
+            <button class="fav ${isFavorit ? 'active' : ''}" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
+            <button class="mic" onclick="event.stopPropagation(); bicara('${item.teks}')">🎤</button>
+          </div>
+        `;
+        div.onclick = () => bicara(item.teks);
+        container.appendChild(div);
+      });
+    }
+
+    window.onload = () => renderGridKategori();
+  </script>
 </body>
 </html>
