--- a/tempatumum.html
+++ b/tempatumum.html
@@ -7,23 +7,19 @@
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
-      font-family: 'Arial', cursive, arial;
-      background-color: #80daeb;
+      font-family: 'Arial', sans-serif;
+      background-color: #fef9ef;
       margin: 0;
       padding: 20px;
       text-align: center;
     }
-
     h1 {
-      color: #ffffff;
-      margin-bottom: 10px;
+      color: #333;
     }
-
     .voice-select {
       margin: 10px auto 20px;
       max-width: 300px;
     }
-
     .voice-select select {
       width: 100%;
       padding: 8px;
@@ -32,7 +28,44 @@
       border: 1px solid #ccc;
       cursor: pointer;
     }
-
+    .gear-container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    .gear-btn {
+      font-size: 1.5em;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .pengaturan {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 30px;
+      right: 0;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 5px;
+      z-index: 99;
+    }
+    .pengaturan.hidden {
+      display: none;
+    }
+    .pengaturan button {
+      background-color: #3498db;
+      color: white;
+      border: none;
+      padding: 6px 10px;
+      margin: 4px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .pengaturan button:hover {
+      background-color: #2980b9;
+    }
     .container {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -40,151 +73,158 @@
       max-width: 600px;
       margin: 0 auto 40px;
     }
-
     .item {
       padding: 8px 10px 18px 10px;
       box-shadow: 2px 2px 6px #00000033;
       border-radius: 12px;
       cursor: pointer;
-      user-select: none;
-      transition: transform 0.2s ease;
       background-color: #ffffff;
       border: 2px solid #cbd5e1;
       position: relative;
-    }
-
-    .item:hover { transform: scale(1.03); }
-
-    .emoji { font-size: 2.5em; line-height: 1; }
-    .item p { margin: 5px 0; font-size: 1em; color: #1f2937; }
-
-    .controls {
-      position: relative;
-      display: flex;
-      justify-content: flex-end;
-      gap: 8px;
-    }
-
-    .controls button.fav {
-      position: absolute;
-      top: 8px;
-      left: 8px;
-      font-size: 1.6em;
-      color: #888;
-      background: none;
-      border: none;
-      cursor: pointer;
       user-select: none;
-      transition: color 0.3s ease, filter 0.3s ease;
-      z-index: 10;
-      filter: grayscale(70%);
+      transition: transform 0.2s ease;
     }
-
-    .controls button.fav.active {
-      color: #FFD700;
-      filter: none;
-      text-shadow: 0 0 5px #FFD700;
+    .item:hover {
+      transform: scale(1.03);
     }
-
-    .controls button.mic {
+    .emoji {
+      font-size: 2.5em;
+    }
+    .item p {
+      margin: 5px 0;
+      font-size: 1em;
+      font-weight: bold;
+      color: #1f2937;
+    }
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 5px;
+    }
+    .controls button {
       background: none;
       border: none;
       font-size: 1.2em;
       cursor: pointer;
-      color: #0a3d62;
-      position: relative;
-      z-index: 5;
+      user-select: none;
     }
-
+    .fav {
+      color: gray;
+    }
+    .fav.active {
+      color: gold;
+      text-shadow: 0 0 3px gold;
+    }
     .feedback {
       margin-top: 4px;
       font-weight: bold;
       min-height: 18px;
       font-size: 0.9em;
       color: #0a3d62;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <h1 id="judulKategori">Kategori: Tempat Umum</h1>
+  <h1>Kategori: Tempat Umum</h1>
+
+  <div class="gear-container">
+    <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
+    <div id="menuPengaturan" class="pengaturan hidden">
+      <button onclick="tambahKosakata()">➕ Tambah</button>
+      <button onclick="hapusKosakata()">🗑️ Hapus</button>
+    </div>
+  </div>
+
   <div class="voice-select">
-    <label for="voiceSelect" style="color:white">Pilih Suara:</label>
+    <label for="voiceSelect">Pilih Suara:</label>
     <select id="voiceSelect">
       <option value="Indonesian Female" selected>Perempuan</option>
       <option value="Indonesian Male">Laki-laki</option>
     </select>
   </div>
+
   <div class="container" id="gridKategori"></div>
 
   <script>
-    const soundClickMic = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9bdf8633e.mp3');
-    const soundRecordStart = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_d264174dae.mp3');
-    const soundCorrect = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_4b4e7647fa.mp3');
-    const soundWrong = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_94a5831e04.mp3');
+    const key = 'kosakata_lokasi_tempat_umum';
+    const defaultItems = [
+      { teks: 'Saya mau beli', emoji: '🛍️' },
+      { teks: 'Berapa harganya?', emoji: '💰' },
+      { teks: 'Saya mau bayar', emoji: '💵' },
+      { teks: 'Saya mau ke toilet', emoji: '🚽' },
+      { teks: 'Tolong bantu saya', emoji: '🙏' },
+      { teks: 'Saya tersesat', emoji: '😢' },
+      { teks: 'Saya mencari orang tua', emoji: '🧑‍🤝‍🧑' },
+      { teks: 'Saya mau jalan-jalan', emoji: '🚶‍♂️' },
+      { teks: 'Saya senang di sini', emoji: '😃' }
+    ];
 
-    const dataKategori = {
+    function loadItems() {
+      const saved = JSON.parse(localStorage.getItem(key) || '[]');
+      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
+    }
+
+    function saveItems(items) {
+      localStorage.setItem(key, JSON.stringify(items));
+    }
+
+    let dataKategori = {
       judul: "Tempat Umum",
-      items: [
-        { teks: 'Saya mau beli', emoji: '🛍️' },
-        { teks: 'Berapa harganya?', emoji: '💰' },
-        { teks: 'Saya mau bayar', emoji: '💵' },
-        { teks: 'Saya lapar', emoji: '🤤' },
-        { teks: 'Saya mau makan di sini', emoji: '🍽️' },
-        { teks: 'Saya mau dibungkus', emoji: '🛍️' },
-        { teks: 'Saya haus', emoji: '🥛' },
-        { teks: 'Saya mau minum', emoji: '🍹' },
-        { teks: 'Saya mau duduk', emoji: '🪑' },
-        { teks: 'Saya capek', emoji: '😪' },
-        { teks: 'Saya mau ke toilet', emoji: '🚽' },
-        { teks: 'Tolong bantu saya', emoji: '🙏' },
-        { teks: 'Saya tersesat', emoji: '😢' },
-        { teks: 'Saya mencari orang tua', emoji: '🧑‍🤝‍🧑' },
-        { teks: 'Saya mau pulang', emoji: '🏠' },
-        { teks: 'Saya sedang menunggu', emoji: '⏳' },
-        { teks: 'Saya antri', emoji: '🧍‍♀️🧍‍♂️' },
-        { teks: 'Saya tidak suka ramai', emoji: '🙉' },
-        { teks: 'Saya takut', emoji: '😧' },
-        { teks: 'Saya mau ke dokter', emoji: '🧑‍⚕️' },
-        { teks: 'Saya sakit', emoji: '🤒' },
-        { teks: 'Saya mau jalan-jalan', emoji: '🚶‍♂️' },
-        { teks: 'Saya senang di sini', emoji: '😃' },
-        { teks: 'Saya tidak nyaman', emoji: '😕' },
-        { teks: 'Saya menunggu giliran', emoji: '🔁' }
-      ]
+      items: loadItems()
     };
 
-    function loadFavorit() {
-      return JSON.parse(localStorage.getItem('favoritList')) || [];
+    // Load favorit global
+    const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
+
+    function togglePengaturan() {
+      document.getElementById('menuPengaturan').classList.toggle('hidden');
     }
 
-    function saveFavorit(list) {
-      localStorage.setItem('favoritList', JSON.stringify(list));
-    }
-
-    function toggleFavorit(teks) {
-      let favoritList = loadFavorit();
-      const idx = favoritList.indexOf(teks);
-      if (idx > -1) {
-        favoritList.splice(idx, 1);
-      } else {
-        favoritList.push(teks);
+    function tambahKosakata() {
+      const teks = prompt("Masukkan teks:");
+      const emoji = prompt("Masukkan emoji:");
+      if (teks && emoji) {
+        const newItem = { teks: teks.trim(), emoji: emoji.trim() };
+        dataKategori.items.push(newItem);
+        saveItems(dataKategori.items);
+        renderGridKategori();
       }
-      saveFavorit(favoritList);
-      renderGridKategori();
+    }
+
+    function hapusKosakata() {
+      const teks = prompt("Masukkan teks yang ingin dihapus:");
+      const index = dataKategori.items.findIndex(item => item.teks === teks);
+      if (index !== -1) {
+        dataKategori.items.splice(index, 1);
+        saveItems(dataKategori.items);
+        renderGridKategori();
+      } else {
+        alert("Teks tidak ditemukan!");
+      }
     }
 
     function bicara(teks) {
-      const voice = document.getElementById('voiceSelect').value || "Indonesian Female";
+      const voice = document.getElementById('voiceSelect').value;
       responsiveVoice.speak(teks, voice);
     }
 
+    // Fungsi latihan bicara dengan speech recognition
     function latih(teksTarget, id) {
+      const soundClickMic = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9bdf8633e.mp3?filename=mouse-click-124467.mp3');
+      const soundRecordStart = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_d264174dae.mp3?filename=pop-94319.mp3');
+      const soundCorrect = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_4b4e7647fa.mp3?filename=correct-2-46134.mp3');
+      const soundWrong = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_94a5831e04.mp3?filename=error-126627.mp3');
+
       soundClickMic.play();
       const recognition = new webkitSpeechRecognition();
       recognition.lang = 'id-ID';
       recognition.interimResults = false;
+
       recognition.onstart = () => soundRecordStart.play();
+
       recognition.onresult = (event) => {
         const hasil = event.results[0][0].transcript.toLowerCase();
         const skor = kemiripan(hasil, teksTarget.toLowerCase());
@@ -199,10 +239,12 @@
           soundWrong.play();
         }
       };
+
       recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi ya!");
       recognition.start();
     }
 
+    // Hitung kemiripan dua string (Levenshtein)
     function kemiripan(a, b) {
       const jarak = levenshtein(a, b);
       return 1 - jarak / Math.max(a.length, b.length);
@@ -225,43 +267,41 @@
       return dp[b.length][a.length];
     }
 
+    function toggleFavorit(teks) {
+      const index = favoritList.indexOf(teks);
+      if (index !== -1) {
+        favoritList.splice(index, 1);
+      } else {
+        favoritList.push(teks);
+      }
+      localStorage.setItem('favoritList', JSON.stringify(favoritList));
+      renderGridKategori();
+    }
+
     function renderGridKategori() {
-      document.getElementById('judulKategori').innerText = `Kategori: ${dataKategori.judul}`;
       const container = document.getElementById('gridKategori');
       container.innerHTML = '';
-
-      const favoritList = loadFavorit();
-
       dataKategori.items.forEach(item => {
-        const teks = item.teks;
-        const emoji = item.emoji || '❓';
-        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
-
+        const isFavorit = favoritList.includes(item.teks);
+        const idTeks = item.teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
         const div = document.createElement('div');
         div.className = 'item';
-
-        const isFavorit = favoritList.includes(teks);
-
         div.innerHTML = `
-          <div class="emoji">${emoji}</div>
-          <p>${teks}</p>
+          <div class="emoji">${item.emoji}</div>
+          <p>${item.teks}</p>
           <div class="controls">
-            <button class="fav ${isFavorit ? 'active' : ''}" title="${isFavorit ? 'Hapus dari Favorit' : 'Tambah ke Favorit'}" onclick="event.stopPropagation(); toggleFavorit('${teks}')">
-              ⭐
-            </button>
-            <button class="mic" title="Latih bicara" onclick="event.stopPropagation(); latih('${teks}', '${idTeks}')">🎤</button>
+            <button class="fav ${isFavorit ? 'active' : ''}" title="Toggle Favorit" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
+            <button class="mic" title="Latih bicara" onclick="event.stopPropagation(); latih('${item.teks}', '${idTeks}')">🎤</button>
           </div>
           <p class="feedback" id="feedback-${idTeks}"></p>
         `;
-
-        div.onclick = () => bicara(teks);
+        div.onclick = () => bicara(item.teks);
         container.appendChild(div);
       });
     }
 
-    window.onload = () => {
-      renderGridKategori();
-    };
+    window.onload = () => renderGridKategori();
   </script>
+
 </body>
 </html>
