--- a/tambah.html
+++ b/tambah.html
@@ -1,35 +1,40 @@
 <!-- Tombol Layanan -->
 <div class="gear-container">
-  <button class="gear-btn" onclick="toggleMenu()">📖</button>
-  <div id="menuLayanan" class="pengaturan hidden">
-    <button onclick="bukaPanduan()">❓ Panduan</button>
-    <button onclick="kirimSaran()">💬 Kritik & Saran</button>
-    <button onclick="salinEmail()">📧 Kontak Email</button>
-  </div>
+  <button class="gear-btn" onclick="bukaPanduan()">📖</button>
 </div>
 
-<!-- Modal Panduan -->
+<!-- Modal Panduan & Layanan -->
 <div id="modalPanduan" class="modal hidden">
   <div class="modal-content">
     <span class="close" onclick="tutupPanduan()">&times;</span>
-    <h2>Panduan Penggunaan</h2>
-    <ol>
-      <li><strong>Memilih Kosakata:</strong> Klik kartu kosakata untuk mendengar suaranya.</li>
-      <li><strong>Menandai Favorit:</strong> Klik ⭐ untuk menambahkan ke daftar favorit.</li>
-      <li><strong>Latihan Bicara 🎤:</strong> Klik ikon mic dan ucapkan kata sesuai teks.</li>
-      <li><strong>Suara:</strong> Pilih suara laki-laki/perempuan di atas.</li>
-      <li><strong>Tambah/Hapus Kosakata:</strong> Bisa dilakukan melalui tombol tambah/hapus (jika tersedia).</li>
-      <li><strong>Kritik & Saran:</strong> Kirimkan ke: <code>mediakomunikasiAAC@gmail.com</code></li>
+
+    <h2>📖 Panduan Penggunaan <br> <small style="font-size: 0.8em; color: #888;">Mudah Bicara</small></h2>
+    <ol style="line-height: 1.6; padding-left: 20px;">
+      <li><strong>Memilih Kosakata</strong><br>Klik salah satu kartu yang berisi teks dan emoji untuk mengeluarkan suara ucapan.<br>Suara bisa disesuaikan (laki-laki/perempuan) melalui menu pilihan suara di atas grid kosakata.</li>
+      <li><strong>Menandai Kosakata Favorit</strong><br>Klik ikon ⭐ di pojok kiri atas kartu untuk menambahkan ke favorit.<br>Klik lagi untuk menghapus dari favorit.<br>Kosakata favorit bisa dilihat di halaman “Favorit Saya - Semua Kategori”.</li>
+      <li><strong>Latihan Bicara (🎤)</strong><br>Klik ikon 🎤 di setiap kartu untuk melatih pelafalan.<br>Ucapkan sesuai teks yang tertulis, sistem akan memberi umpan balik apakah sudah tepat atau belum.</li>
+      <li><strong>Menambah & Menghapus Kosakata</strong> <em>(opsional, jika tersedia)</em><br>Klik tombol ⚙️ atau 📖 di pojok kanan atas, lalu pilih ➕ Tambah untuk menambahkan kosakata baru (teks dan emoji).<br>Pilih 🗑️ Hapus untuk menghapus kosakata dari kategori.<br>Kosakata hasil tambah/hapus akan tersimpan di browser pengguna (menggunakan localStorage).</li>
+      <li><strong>Suara Ucapan</strong><br>Gunakan pilihan suara di menu dropdown (Indonesian Female atau Male) untuk menyesuaikan suara yang digunakan saat bicara.</li>
+      <li><strong>Kontak & Layanan</strong><br>Klik tombol 📖 untuk melihat menu:<br>❓ <strong>Panduan</strong> (panduan ini)<br>💬 <strong>Kritik & Saran</strong> (terhubung ke email)<br>📧 <strong>Kontak Email</strong> (untuk menyalin alamat email developer)</li>
     </ol>
+
+    <hr style="margin: 20px 0;">
+
+    <h2>📬 Layanan & Kontak</h2>
+    <p>Kami terbuka untuk masukan Anda. Jika memiliki saran atau kritik, silakan kirimkan melalui email berikut:</p>
+    <p><strong>Email:</strong> <code id="emailKontak">mediakomunikasiAAC@gmail.com</code></p>
+    <button onclick="salinEmail()">📋 Salin Email</button>
+    <button onclick="kirimEmail()">✉️ Kirim Email</button>
   </div>
 </div>
 
-<!-- CSS (tambahkan di style atau <head>) -->
+<!-- CSS Modal -->
 <style>
   .gear-container {
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
+    z-index: 1000;
   }
   .gear-btn {
     font-size: 1.5em;
@@ -37,34 +42,6 @@
     border: none;
     cursor: pointer;
   }
-  .pengaturan {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 30px;
-    right: 0;
-    background: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 5px;
-    z-index: 99;
-  }
-  .pengaturan.hidden {
-    display: none;
-  }
-  .pengaturan button {
-    background-color: #3498db;
-    color: white;
-    border: none;
-    padding: 6px 10px;
-    margin: 4px;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  .pengaturan button:hover {
-    background-color: #2980b9;
-  }
-
   .modal {
     display: flex;
     justify-content: center;
@@ -80,10 +57,10 @@
   }
   .modal-content {
     background-color: #fff;
-    padding: 20px 25px;
+    padding: 25px 30px;
     border-radius: 12px;
-    max-width: 500px;
-    width: 90%;
+    max-width: 700px;
+    width: 92%;
     text-align: left;
     position: relative;
     color: #333;
@@ -93,8 +70,8 @@
     margin-top: 0;
     color: #0a3d62;
   }
-  .modal-content ol {
-    padding-left: 20px;
+  .modal-content ol li {
+    margin-bottom: 16px;
   }
   .modal-content .close {
     position: absolute;
@@ -103,14 +80,23 @@
     font-size: 1.5em;
     cursor: pointer;
   }
+  .modal-content button {
+    margin-top: 10px;
+    margin-right: 10px;
+    padding: 8px 14px;
+    border: none;
+    border-radius: 6px;
+    background-color: #3498db;
+    color: white;
+    cursor: pointer;
+  }
+  .modal-content button:hover {
+    background-color: #2980b9;
+  }
 </style>
 
 <!-- Script -->
 <script>
-  function toggleMenu() {
-    document.getElementById('menuLayanan').classList.toggle('hidden');
-  }
-
   function bukaPanduan() {
     document.getElementById('modalPanduan').classList.remove('hidden');
   }
@@ -122,11 +108,11 @@
   function salinEmail() {
     const email = "mediakomunikasiAAC@gmail.com";
     navigator.clipboard.writeText(email).then(() => {
-      alert("Email telah disalin: " + email);
+      alert("Email telah disalin ke clipboard: " + email);
     });
   }
 
-  function kirimSaran() {
+  function kirimEmail() {
     window.location.href = "mailto:mediakomunikasiAAC@gmail.com?subject=Kritik dan Saran&body=Halo, saya ingin memberikan masukan...";
   }
 </script>
